--- a/Spot/Spot/Base.lproj/Main.storyboard
+++ b/Spot/Spot/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9GI-EH-x6s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="141" y="-100"/>
+            <point key="canvasLocation" x="620" y="-175"/>
         </scene>
         <!--Library View-->
         <scene sceneID="aAT-Yk-uje">
@@ -75,82 +75,84 @@
         <!--Navigation Controller-->
         <scene sceneID="SIg-1J-kbp">
             <objects>
-                <navigationController navigationBarHidden="YES" id="zp7-IG-iNu" sceneMemberID="viewController">
+                <navigationController id="zp7-IG-iNu" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" systemItem="search" id="clc-Zx-weD"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KAG-C9-cbv">
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="384" height="667"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="KAG-C9-cbv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="tuy-OF-VWA" kind="relationship" relationship="rootViewController" id="l56-rE-fun"/>
+                        <segue destination="mWG-Ua-2yW" kind="relationship" relationship="rootViewController" id="p10-ki-kSp"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qsl-pE-d4j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1169" y="546"/>
+            <point key="canvasLocation" x="-1119" y="293"/>
         </scene>
-        <!--Search View-->
-        <scene sceneID="hPg-J7-uM8">
+        <!--Spot Search View Controller-->
+        <scene sceneID="4f9-P7-oue">
             <objects>
-                <viewController title="Search View" id="tuy-OF-VWA" customClass="SpotSearchViewController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="mWG-Ua-2yW" customClass="SpotSearchViewController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="PEK-1D-hwu"/>
-                        <viewControllerLayoutGuide type="bottom" id="F11-0F-9lI"/>
+                        <viewControllerLayoutGuide type="top" id="ihA-87-WPT"/>
+                        <viewControllerLayoutGuide type="bottom" id="Dt0-hc-yCh"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="tT8-n6-GRf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                    <view key="view" contentMode="scaleToFill" id="74L-gb-bWu">
+                        <rect key="frame" x="0.0" y="64" width="384" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" barStyle="black" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="Fzk-hw-SId">
-                                <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <searchBar contentMode="redraw" fixedFrame="YES" barStyle="black" searchBarStyle="minimal" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QX1-wg-UFa">
+                                <frame key="frameInset" minY="20" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="M67-gm-YEk">
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wNw-0z-sjB">
+                                <frame key="frameInset" minY="64" width="384" height="534"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TraktMovieSearchCell" textLabel="W1b-vv-aIl" style="IBUITableViewCellStyleDefault" id="XKf-ky-uu5">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TraktMovieSearchCell" textLabel="eWB-6d-tTR" style="IBUITableViewCellStyleDefault" id="kiF-Tr-xbb">
+                                        <rect key="frame" x="0.0" y="28" width="384" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XKf-ky-uu5" id="9jq-ZF-hEk">
-                                            <frame key="frameInset" width="375" height="43"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kiF-Tr-xbb" id="i05-87-JaA">
+                                            <frame key="frameInset" width="384" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="W1b-vv-aIl">
-                                                    <frame key="frameInset" minX="15" width="345" height="43"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="eWB-6d-tTR">
+                                                    <frame key="frameInset" minX="15" width="354" height="44"/>
                                                     <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="Fzk-hw-SId" firstAttribute="top" secondItem="tT8-n6-GRf" secondAttribute="top" constant="20" id="8QQ-ce-weM"/>
-                            <constraint firstAttribute="trailing" secondItem="Fzk-hw-SId" secondAttribute="trailing" id="9MO-Zi-Og7"/>
-                            <constraint firstItem="M67-gm-YEk" firstAttribute="leading" secondItem="Fzk-hw-SId" secondAttribute="leading" id="dwC-rX-B8L"/>
-                            <constraint firstItem="Fzk-hw-SId" firstAttribute="leading" secondItem="tT8-n6-GRf" secondAttribute="leading" id="fOj-a3-dzE"/>
-                            <constraint firstItem="Fzk-hw-SId" firstAttribute="bottom" secondItem="M67-gm-YEk" secondAttribute="bottom" constant="-556" id="ias-xg-Tun"/>
-                            <constraint firstItem="M67-gm-YEk" firstAttribute="top" secondItem="Fzk-hw-SId" secondAttribute="bottom" constant="2" id="wJC-cB-J9z"/>
-                            <constraint firstItem="M67-gm-YEk" firstAttribute="trailing" secondItem="Fzk-hw-SId" secondAttribute="trailing" id="ww3-Lk-5jb"/>
-                        </constraints>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="bIA-xq-xIe"/>
+                    <navigationItem key="navigationItem" id="HD4-f7-zck"/>
                     <connections>
-                        <outlet property="searchBar" destination="Fzk-hw-SId" id="hy2-l0-NQa"/>
-                        <outlet property="tableView" destination="M67-gm-YEk" id="PTn-ta-Pc9"/>
+                        <outlet property="searchBar" destination="QX1-wg-UFa" id="Vam-qv-8aQ"/>
+                        <outlet property="tableView" destination="wNw-0z-sjB" id="lAb-Oz-AyR"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dbg-yL-HQk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="izb-bF-Gq2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-311" y="546"/>
+            <point key="canvasLocation" x="-293" y="293"/>
         </scene>
         <!--SpotLoginViewController-->
         <scene sceneID="Lkp-ST-FPL">
@@ -250,7 +252,7 @@
             </objects>
             <point key="canvasLocation" x="178" y="-849"/>
         </scene>
-        <!--DISCOVER-->
+        <!--Spot Discover View Controller-->
         <scene sceneID="1oc-O0-FkU">
             <objects>
                 <viewController id="fil-mJ-esT" customClass="SpotDiscoverViewController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
@@ -267,10 +269,10 @@
                                 <color key="sectionIndexBackgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DiscoverTableViewCell" rowHeight="285" id="Dsu-Wu-NlV" customClass="SpotDiscoverTableViewCell" customModule="Spot" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="384" height="285"/>
+                                        <rect key="frame" x="0.0" y="28" width="1000" height="285"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dsu-Wu-NlV" id="OMW-s0-pqP">
-                                            <frame key="frameInset" width="384" height="284"/>
+                                            <frame key="frameInset" width="1000" height="284.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trending Movies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VNg-Xz-UBw">
@@ -405,9 +407,7 @@
                             <constraint firstAttribute="trailing" secondItem="pge-dH-T7V" secondAttribute="trailing" id="oaG-Y7-ZLT"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="DISCOVER" id="Jb4-WH-I1G">
-                        <barButtonItem key="backBarButtonItem" title=" " id="2RM-a7-0Ax"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="Jb4-WH-I1G"/>
                     <connections>
                         <outlet property="activityViewController" destination="TTF-sK-U61" id="BMJ-HR-la3"/>
                         <outlet property="tableView" destination="pge-dH-T7V" id="czE-Xw-Vra"/>
@@ -417,10 +417,10 @@
             </objects>
             <point key="canvasLocation" x="1054" y="-1517"/>
         </scene>
-        <!--SpotDetailViewController-->
+        <!--Spot Detail View Controller-->
         <scene sceneID="GwI-XU-pLB">
             <objects>
-                <viewController storyboardIdentifier="SpotDetailViewController" title="SpotDetailViewController" id="hS2-Kw-5Y9" customClass="SpotDetailViewController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SpotDetailViewController" id="hS2-Kw-5Y9" customClass="SpotDetailViewController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tRj-8G-YgR"/>
                         <viewControllerLayoutGuide type="bottom" id="0b6-tT-eR8"/>
